--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* Message Form */
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form>input {
+  width: 50rem;
+  padding-left: 0px;
+  padding-right: 0px;
+  border-left: 0px;
+  border-right: 0px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Comment box + Button Row */
+form>div {
+  display: grid;
+  grid-template-rows: 1fr 0.1fr;
+  gap: 0px;
+  width: 50rem
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+/* Button Row */
+form>div>div {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.card {
-  padding: 2em;
+/* Posts */
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+/* Individual Posts */
+ul>li {
+  list-style: none;
+  border: 1px black solid;
+  border-radius: 10px;
+  width: 30rem;
+}
+
+/* Name & Date */
+ul>li>div {
+  display: flex;
+  justify-content: space-between;
 }
