--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,35 @@
+* {
+  background-color: #F9EFDB;
+}
+
+/* Header */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: aqua;
+  display: flex;
+  justify-content: space-between;
+  background-color: #638889;
+}
+
+.logo {
+  width: 2%;
+  height: 2%;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.title>h1 {
+  border-bottom: 1px black solid;
+  width: 50rem;
+}
+
 /* Message Form */
 form {
   display: flex;
@@ -6,26 +38,50 @@ form {
   gap: 10px;
 }
 
-form>input {
-  width: 50rem;
-  padding-left: 0px;
-  padding-right: 0px;
-  border-left: 0px;
-  border-right: 0px;
+/* Name Box */
+form>div>input {
+  margin-bottom: 0.5rem;
+  background-color: #EBD9B4;
 }
 
 /* Comment box + Button Row */
 form>div {
   display: grid;
-  grid-template-rows: 1fr 0.1fr;
+  grid-template-rows: 0.1fr 1fr 0.1fr;
   gap: 0px;
-  width: 50rem
+  width: 50rem;
+}
+
+/* Comment Box */
+form>div>textarea {
+  background-color: #EBD9B4;
 }
 
 /* Button Row */
 form>div>div {
   display: flex;
   justify-content: flex-end;
+  /* background-color: #EBD9B4; */
+}
+
+/* Submit Button */
+form>div>div>button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 5px 15px;
+  border: 1px solid #222222;
+  background: #fff;
+  color: #222222;
+}
+
+form>div>div>button:hover {
+  border-color: #000000;
+  background-color: #9DBC98;
 }
 
 /* Posts */
@@ -34,18 +90,43 @@ ul {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+  padding: 0;
 }
 
 /* Individual Posts */
 ul>li {
   list-style: none;
-  border: 1px black solid;
-  border-radius: 10px;
-  width: 30rem;
+  border-top: 1px black solid;
+  width: 40rem;
 }
 
 /* Name & Date */
 ul>li>div {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+/* Delete button */
+ul>li>button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 0px 5px;
+  border: 1px solid #222222;
+  background: #fff;
+  color: #222222;
+}
+
+ul>li>button:hover {
+  border-color: #000000;
+  background-color: #9DBC98;
+}
+
+.username {
+  font-weight: bold;
 }
