--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -93,7 +93,7 @@ ul {
   padding: 0;
 }
 
-/* Individual Posts */
+/* Individual Posts li*/
 ul>li {
   list-style: none;
   border-top: 1px black solid;
@@ -105,6 +105,11 @@ ul>li>div {
   display: flex;
   flex-direction: column;
   gap: 0.3rem;
+}
+
+/* Post */
+ul>li>p {
+  text-align: justify;
 }
 
 /* Delete button */
