Add additional login page for failed authentication

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -136,3 +136,10 @@ ul>li>button:hover {
 .username {
   font-weight: bold;
 }
+
+.editDiv {
+  width: 40rem;
+  display: grid;
+  grid-template-rows: 1fr 0.1fr;
+  gap: 0px;
+}
